<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.1.3.RELEASE</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <groupId>org.atbyuan.note</groupId>
    <artifactId>root</artifactId>
    <version>1.0</version>
    <packaging>pom</packaging>

    <modules>
        <module>common</module>
        <module>box</module>
        <module>swagger</module>
        <module>shardingSphere</module>
        <module>db</module>
        <module>rpc</module>
        <module>nacos</module>
        <module>gateway</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>

        <spring-boot.version>2.1.3.RELEASE</spring-boot.version>
        <spring-cloud.version>Greenwich.SR5</spring-cloud.version>
        <spring-cloud-nacos.version>2.1.4.RELEASE</spring-cloud-nacos.version>

        <velocity-engine-core.version>2.1</velocity-engine-core.version>
        <mybatis-plus-boot.verison>3.4.1</mybatis-plus-boot.verison>
        <pagehelper.version>1.2.12</pagehelper.version>
        <lombok.version>1.18.12</lombok.version>
        <easyexcel.version>2.1.6</easyexcel.version>
        <gson.version>2.8.6</gson.version>
        <jackson.version>2.11.3</jackson.version>
        <druid.version>1.1.22</druid.version>
        <mysql.version>8.0.21</mysql.version>
        <commons-lang3.version>3.11</commons-lang3.version>
        <commons-io.version>2.8.0</commons-io.version>
        <commons-pool2.version>2.9.0</commons-pool2.version>
        <commons-fileupload.version>1.4</commons-fileupload.version>
        <fastjson.version>1.2.79</fastjson.version>
        <httpmime.version>4.5.12</httpmime.version>
        <jedis.version>2.9.1</jedis.version>
        <hutool.version>5.5.7</hutool.version>
        <ip2region.version>1.7.2</ip2region.version>
        <guava.version>30.1-jre</guava.version>
        <elasticsearch.version>7.2.0</elasticsearch.version>
        <swagger.version>3.0.0</swagger.version>
        <sharding-sphere.version>4.1.1</sharding-sphere.version>
        <validation-api.version>2.0.1.Final</validation-api.version>
        <javamelody.version>1.85.0</javamelody.version>
        <flink.version>1.13.2</flink.version>
        <netty.version>4.1.63.Final</netty.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- Spring Boot -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <!-- Spring Cloud -->
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>com.alibaba.cloud</groupId>
                <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
                <version>${spring-cloud-nacos.version}</version>
            </dependency>

            <!--                        数据库相关                        -->
            <!--mybatis-plus-->
            <dependency>
                <groupId>com.baomidou</groupId>
                <artifactId>mybatis-plus-boot-starter</artifactId>
                <version>${mybatis-plus-boot.verison}</version>
            </dependency>
            <!--分页插件-->
            <dependency>
                <groupId>com.github.pagehelper</groupId>
                <artifactId>pagehelper-spring-boot-starter</artifactId>
                <version>${pagehelper.version}</version>
            </dependency>
            <dependency>
                <groupId>com.alibaba</groupId>
                <artifactId>druid-spring-boot-starter</artifactId>
                <version>${druid.version}</version>
            </dependency>
            <dependency>
                <groupId>mysql</groupId>
                <artifactId>mysql-connector-java</artifactId>
                <scope>runtime</scope>
                <version>${mysql.version}</version>
            </dependency>
            <!-- Sharding-JDBC for spring boot -->
            <dependency>
                <groupId>org.apache.shardingsphere</groupId>
                <artifactId>sharding-jdbc-spring-boot-starter</artifactId>
                <version>${sharding-sphere.version}</version>
            </dependency>
            <!--monitor-->
            <dependency>
                <groupId>net.bull.javamelody</groupId>
                <artifactId>javamelody-spring-boot-starter</artifactId>
                <version>${javamelody.version}</version>
            </dependency>
            <!--lombok-->
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>${commons-lang3.version}</version>
            </dependency>
            <dependency>
                <groupId>commons-io</groupId>
                <artifactId>commons-io</artifactId>
                <version>${commons-io.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-pool2</artifactId>
                <version>${commons-pool2.version}</version>
            </dependency>
            <dependency>
                <groupId>commons-fileupload</groupId>
                <artifactId>commons-fileupload</artifactId>
                <version>${commons-fileupload.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>${guava.version}</version>
            </dependency>
            <dependency>
                <groupId>cn.hutool</groupId>
                <artifactId>hutool-all</artifactId>
                <version>${hutool.version}</version>
            </dependency>
            <!-- validator -->
            <dependency>
                <groupId>javax.validation</groupId>
                <artifactId>validation-api</artifactId>
                <version>${validation-api.version}</version>
            </dependency>
            <dependency>
                <groupId>org.hibernate.validator</groupId>
                <artifactId>hibernate-validator</artifactId>
                <version>${hibernate-validator.version}</version>
            </dependency>

            <!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
            <dependency>
                <groupId>com.alibaba</groupId>
                <artifactId>fastjson</artifactId>
                <version>${fastjson.version}</version>
            </dependency>
            <!-- ES 客户端 -->
            <!--<dependency>-->
            <!--    <groupId>org.elasticsearch.client</groupId>-->
            <!--    <artifactId>elasticsearch-rest-high-level-client</artifactId>-->
            <!--    <version>${elasticsearch.version}</version>-->
            <!--</dependency>-->
            <!--&lt;!&ndash; ES 版本 &ndash;&gt;-->
            <!--<dependency>-->
            <!--    <groupId>org.elasticsearch</groupId>-->
            <!--    <artifactId>elasticsearch</artifactId>-->
            <!--    <version>${elasticsearch.version}</version>-->
            <!--</dependency>-->
            <!-- 引入Swagger3依赖 -->
            <dependency>
                <groupId>io.springfox</groupId>
                <artifactId>springfox-boot-starter</artifactId>
                <version>${swagger.version}</version>
            </dependency>
            <!--&lt;!&ndash; flink &ndash;&gt;-->
            <!--<dependency>-->
            <!--    <groupId>org.apache.flink</groupId>-->
            <!--    <artifactId>flink-java</artifactId>-->
            <!--    <version>${flink.version}</version>-->
            <!--</dependency>-->
            <!--<dependency>-->
            <!--    <groupId>org.apache.flink</groupId>-->
            <!--    <artifactId>flink-streaming-java_2.11</artifactId>-->
            <!--    <version>${flink.version}</version>-->
            <!--</dependency>-->
            <!--<dependency>-->
            <!--    <groupId>org.apache.flink</groupId>-->
            <!--    <artifactId>flink-clients_2.11</artifactId>-->
            <!--    <version>${flink.version}</version>-->
            <!--</dependency>-->
            <!--<dependency>-->
            <!--    <groupId>io.netty</groupId>-->
            <!--    <artifactId>netty-all</artifactId>-->
            <!--    <version>${netty.version}</version>-->
            <!--</dependency>-->
        </dependencies>
    </dependencyManagement>

</project>
